<resources>
    <string name="app_name">Заметки</string>
    <string name="note_title_hint">Заголовок заметки</string>
    <string name="high_priority">Высший приоритет</string>
    <string name="note_description">Описание заметки</string>
    <string name="search">Поиск</string>
    <string name="add">Добавить</string>
    <string name="sort">Сортировка</string>
    <string name="not_implemented">Функционал не реализован!</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="notes">Заметки</string>
    <string name="about">О приложении</string>
    <string name="settings">Настройки</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">Имя пользователя</string>
    <string name="user_position">Должность</string>
    <string name="application_description">Данное приложение было разработано в рамках прохождения курса по Android от компании GeekBrains.</string>
    <string name="version">Версия</string>
    <string name="continue_without_auth">Продолжить без авторизации</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="user_email">e-mail</string>
    <string name="positive_button_caption">ДА</string>
    <string name="negative_button_caption">НЕТ</string>
    <string name="delete_note_title">Удаление заметки</string>
    <string name="delete_note_message">Вы действительно хотите удалить заметку?</string>
    <string name="note">Заметка</string>
    <string name="save_button_caption">СОХРАНИТЬ</string>
</resources>